# py_dot_product_unroll

./: CMakeLists.txt  README.MD  setup.py
app/: dot_product_unroll.cpp  main.py
